kubernetes/clients-service/service/clients-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clients-service
  template:
    metadata:
      labels:
        app: clients-service
    spec:
      containers:
        - name: clients-service
          image: stas110802/microservices.clients-service:latest
          imagePullPolicy: Always
          ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clients-service-internal
spec:
  type: ClusterIP
  selector:
    app: clients-service
  ports:
    - name: clients-service
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: clients-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
