kubernetes/clients-service/service/ingress-srv-clients.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: clients-service-public
                port:
                  number: 80
